# DAOviser

./: .gitignore
backend/ai_voting_agent/: Cargo.toml  Dockerfile  docker-compose.yaml
backend/ai_voting_agent/src/: lib.rs
backend/ai_voting_agent/src/api/: api.rs
backend/ai_voting_agent/src/config/: config.rs
backend/ai_voting_agent/src/proposal_snapchot/: collector.rs  mod.rs  prop_struct.rs  repository.rs
backend/ai_voting_agent/src/recommendation/: ai.rs  generation.rs  mod.rs  repository.rs
backend/ai_voting_agent/src/scheduler/: scheduler.rs
backend/ai_voting_agent/src/voting/: snapshot.rs
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  main.tsx  theme.ts  utils.ts
frontend/src/components/: DashboardLayout.tsx  FinalRecommendation.tsx  ProposalCard.tsx  ProposalsList.tsx  ProposalsPage.tsx  ProposalsTable.tsx  RecommendationPage.tsx  SpacesPage.tsx
vote_bot/: vote_bot.js
