[package]
name = "ai_voting_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
actix-web = "4.9.0"
actix-files = "0.6.6"
actix-cors = "0.7.0"
serde_json = "1.0.138"
dotenv = "0.15"
reqwest = { version = "0.12.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4", "with-serde_json-1"] }
log = "0.4"
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
rig-core = "0.7.0"
env_logger = "0.11.6"
ethers = { version = "2.0.14", features = ["eip712"] } 
eip712_enc = "0.1.0"
eyre = "0.6.12"
anyhow = "1.0.95"
hex_fmt = "0.3.0"


[[bin]]
name = "ai_voting_agent"
path = "src/bin/main.rs"




